2011-01-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testJoinThread.cpp: Interrupt thread.

	* testsuite/testInterfaceRelSat.cpp: Fix FTBFS.
	* testsuite/testJoinThread.cpp: Likewise.

	* src/network/OutputThread.cpp: Fix warning.

	* include/network/AsynClient.h (handle_read_header): Clean-up.
	* include/network/BaseClient.h: Likewise.
	* include/network/Client.h: Likewise.
	* include/network/Client.tcc: Likewise.

2011-01-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/OutputThread.cpp: Send if there is something in res.

	* src/network/JoinThread.cpp: False assertion.

	* include/network/AsynClient.tcc: Add debug info.

	* src/network/JoinThread.cpp: Inform UNSAT from neighbor.

	* include/network/NeighborOut.h: Add port and use sync write.

	* include/network/Handler.h: Add port.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/StreamingDMCSThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/StreamingDMCSThread.h: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/Handler.tcc: Likewise.

	* include/network/ConcurrentMessageQueueFactory.h: Remove IN and
	CONFLICT message queue.
	Map UIDs to vector of message queues.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.

	* src/dmcsc.cpp: Comment out "printing result."

	* include/network/AsynClient.tcc (handle_read_answer): Fix no_answers.

2011-01-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/mcs/BeliefState.h: Add decision-level support.
	* testsuite/testMessagingGateway.cpp: Likewise.